# duckypad-twitch

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  __main__.py  pyproject.toml
configs/potato/: streaming.toml
duckypad_twitch/: __about__.py  __init__.py  audio.py  configuration.py  duckypad.py  enums.py  layer.py  obsws.py  scene.py  states.py  streamlabs.py  util.py
duckypad_twitch/cli/: __init__.py
duckypad_twitch/macros/: duckypad.py  main.py
tests/: __init__.py
